[Legacy] Column Chooser Modal Spacing fixes

--- a/public/legacy/themes/suite8/css/suitep-base/listview-columnchooser.scss
+++ b/public/legacy/themes/suite8/css/suitep-base/listview-columnchooser.scss
@@ -26,6 +26,7 @@
     }
     #columnsFilterDialog {
         .modal-dialog {
+            max-width: 450px;
             .modal-content {
                 .modal-header {
                     padding: 10px;
